# HiBob

./: .env.example  .gitignore  README.md  RUN_COHERENCE.bat  RUN_TREASURAI.bat
.claude/: launch.json
dashboard/: app.py
hibob-blueprint/backend/: .env.example  Dockerfile  README.md  pyproject.toml
hibob-blueprint/backend/hibob_core/: __init__.py  config.py  recall.py  telemetry.py
hibob-blueprint/backend/hibob_core/agents/: orchestrator.py
hibob-blueprint/backend/hibob_core/api/: app.py  chat.py  documents.py  evals.py  memory.py  projects.py  recall.py  reflections.py  sandbox.py  selfbuild.py  tools.py  vault.py
hibob-blueprint/backend/hibob_core/cost/: breaker.py
hibob-blueprint/backend/hibob_core/db/: pool.py  repositories.py
hibob-blueprint/backend/hibob_core/evals/: judge.py  metrics.py  replay.py  repository.py  router_bandit.py  runner.py
hibob-blueprint/backend/hibob_core/identity/: persona.py
hibob-blueprint/backend/hibob_core/knowledge/: chunking.py  ingestion.py  parsers.py  repository.py  retrieval.py  vector_store.py
hibob-blueprint/backend/hibob_core/memory/: calibration.py  extraction.py  graph.py  repository.py  retrieval.py  service.py  summary.py  vector_store.py
hibob-blueprint/backend/hibob_core/models/: anthropic_adapter.py  base.py  ollama_adapter.py  router.py
hibob-blueprint/backend/hibob_core/multimodal/: attachments.py  image_gen.py  stt.py  tts.py  vision.py
hibob-blueprint/backend/hibob_core/policy/: __init__.py  engine.py  provenance.py
hibob-blueprint/backend/hibob_core/projects/: repository.py  service.py
hibob-blueprint/backend/hibob_core/reflection/: repository.py  service.py
hibob-blueprint/backend/tests/: test_chat_multimodal.py  test_chat_persistence.py  test_chat_voice_out.py  test_cost_breaker.py  test_eval_judge.py  test_evals_metrics.py  test_evals_runner.py  test_image_generate_tool.py  test_knowledge_chunking.py  test_knowledge_ingestion.py  test_knowledge_retrieval.py  test_memory_calibration.py  test_memory_extraction.py  test_memory_graph.py  test_memory_retrieval.py  test_memory_service.py  test_multimodal_attachments.py  test_multimodal_stt.py  test_multimodal_vision.py  test_output_images.py  test_output_tts.py  test_policy_engine.py  test_projects.py  test_provenance_classifier.py  test_recall.py  test_reflection_recurring.py  test_reflection_service.py  test_replay.py  test_router_bandit.py  test_router_privacy.py  test_sandbox_runtime.py  test_selfbuild_classifier.py  test_selfbuild_gate.py  test_selfbuild_gateway.py  test_tool_gateway.py  test_tool_gateway_sandbox.py  test_vault.py
(+433 files in other folders)
