[project]
name = "hibob-core"
version = "0.1.0"
description = "Hibob Core - local-first personal AI operating layer (Phase 1: chat + cost breaker)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "qdrant-client>=1.12",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
# Phase 3 RAG: heavy parsers, intentionally optional so core install/tests stay light.
# Lazy-imported in hibob_core/knowledge/parsers.py; text/markdown work without these.
ingest = [
    "unstructured>=0.15",
    "crawl4ai>=0.3",
]
# Phase 3.7 multimodal: local speech-to-text, optional + lazy (hibob_core/multimodal/stt.py).
# Vision needs no extra dep (uses the existing model adapters).
multimodal = [
    "faster-whisper>=1.0",
]
# Phase 7: ephemeral Docker sandbox (ADR 0011) + credential vault sealing (ADR 0014).
# Lazy-imported; the Noop sandbox + fake sealer keep core/tests light.
sandbox = [
    "docker>=7.0",
]
vault = [
    "cryptography>=43",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hibob_core"]
